@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-17T01:14:00Z",
+  "timestamp" : "2022-05-17T16:24:59Z",
   "count_outdated" : 264,
   "uniques_outdated" : 142,
-  "count" : 302,
-  "uniques" : 166,
+  "count" : 303,
+  "uniques" : 167,
   "clones" : [
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 0, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
