@@ -1,5 +1,5 @@
 {
-  "count": 38,
+  "count": 39,
   "uniques": 13,
   "clones": [
     {
@@ -61,6 +61,11 @@
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
